# optoforce_vaga

./: CMakeLists.txt  package.xml
cfg/: omd.yaml
include/optoforce_vaga/: opto.h  optodaq.h  optopackage.h  optopackage6d.h
launch/: optoforce_sensor.launch  optoforce_to_files.launch
scripts/: vaga.py  vaga_triplet.py
src/: Tf1.cpp  force_filter_node.cpp  median_filter.cpp  optoforce_sensor_node.cpp
